--- a/.env.local
+++ b/.env.local
@@ -1,3 +1,4 @@
-CLIENT_EMAIL=yourclientemail
-CLIENT_ID=yourclientid
-PRIVATE_KEY=yourprivatekey
+CLIENT_EMAIL=
+CLIENT_ID=
+PRIVATE_KEY=
+DATABASE_ID=
